Fix layout on mobile

--- a/frontend/public/style.css
+++ b/frontend/public/style.css
@@ -4,3 +4,7 @@
 #errorText {
     color: red;
 }
+
+form > div {
+    margin: 0.5em 0;
+}
